fix: text wrapping

--- a/online-zoo/pages/main/main.css
+++ b/online-zoo/pages/main/main.css
@@ -95,6 +95,7 @@
 
 .backstage-content {
     margin-left: 87px;
+    width: 465px;
     text-align: left;
     font-family: var(--font-family-r);
     color: var(--color-black-blue);
@@ -103,7 +104,9 @@
 .backstage-content-title {
     margin-top: 0;
     font-size: 48px;
-    line-height: 120%;
+    font-weight: 400;
+    line-height: 58px;
+    letter-spacing: 0em;
 }
 
 .backstge-content-text {
